[package]
name = "tree-sitter-sleigh"
authors = ["novafacing <rowanbhart@gmail.com>"]
description = "Tree-sitter parser for the Ghidra SLEIGH language"
edition = "2021"
keywords = ["parser", "reverse-engineering", "tree-sitter"]
license = "Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/novafacing/tree-sitter-sleigh"
version = "0.1.0"

[dependencies]
rust-sitter = "0.4.2"
malachite = { version = "0.4.14", features = ["serde"] }
regex = "1.10.5"
typed-builder = "0.19.1"

[build-dependencies]
rust-sitter-tool = "0.4.2"
malachite = { version = "0.4.14", features = ["serde"] }
regex = "1.10.5"
typed-builder = "0.19.1"
